decklist publication wip

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -246,6 +246,11 @@ div.site-slogan {
 	margin-top: -20px;
 }
 
+/************ LIST OF DECKLISTS **************/
+
+.decklist-faction-image img {
+    height: 64px;
+}
 
 /************** FACTIONS COLORS **************/
 
