--- a/src/AppBundle/Resources/views/Builder/decks.html.twig
+++ b/src/AppBundle/Resources/views/Builder/decks.html.twig
@@ -1,13 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block javascripts %}
-	{# <script src="{{ asset('/bundles/app/js/app.card_modal.js') }}"></script> #}
-	{# <script src="{{ asset('/bundles/app/js/app.diff.js') }}"></script> #}
-	<script src="{{ asset('/bundles/app/js/app.deck.js') }}"></script>
 	<script src="{{ asset('/bundles/app/js/ui.decks.js') }}"></script>
-	<script type="text/javascript">
-	app.ui.decks = {{ decks|json_encode|raw }};
-	</script>
 {% endblock %}
 
 {% block body %}
@@ -118,7 +112,7 @@
 		</td>
 		<td class="decks-actions text-right">
 			<a href="{{ path('deck_edit',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Edit"><span class="fa fa-pencil fa-fw"></span></a>
-			<button class="disabled btn btn-xs btn-default btn-publish-deck" data-toggle="tooltip" title="Publish"><span class="fa fa-share fa-fw"></span></button>
+			<button class="btn btn-xs btn-default btn-publish-deck" data-toggle="tooltip" title="Publish"><span class="fa fa-share fa-fw"></span></button>
 			<a href="{{ path('deck_duplicate',{deck_id:deck.id}) }}" class="btn btn-xs btn-default" data-toggle="tooltip" title="Duplicate"><span class="fa fa-code-fork fa-fw"></span></a>
 			<button class="btn btn-xs btn-default btn-delete-deck" data-toggle="tooltip" title="Delete"><span class="fa fa-trash-o fa-fw"></span></button>
 		</td>
