--- a/src/AppBundle/Resources/views/Decklist/comments.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/comments.html.twig
@@ -1,6 +1,6 @@
 <table class="table">
 <thead>
-<tr><th><span class="fa fa-comment"></span> {{ decklist.nbcomments }} comments</th></tr>
+<tr><th><span class="fa fa-comment"></span> {{ decklist.nb_comments }} comments</th></tr>
 </thead>
 <tbody>
 {% for comment in decklist.comments %}
