--- a/src/AppBundle/Resources/views/Decklist/edit-modal.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/edit-modal.html.twig
@@ -21,7 +21,7 @@
 							</div>
 							<div class="form-group">
 								<label for="edit-decklist-description">Description</label>
-								<textarea class="form-control" name="description" id="edit-decklist-description" rows="5" placeholder="Enter a brief explanation of the deck strategy and your significant choices">{{ decklist.rawdescription }}</textarea>
+								<textarea class="form-control" name="description" id="edit-decklist-description" rows="5" placeholder="Enter a brief explanation of the deck strategy and your significant choices">{{ decklist.description_md }}</textarea>
 							</div>
 							<div class="form-group">
 								<label for="edit-decklist-tournament">Placed high in a tournament</label>
