--- a/src/AppBundle/Resources/views/Default/recent_decklists.html.twig
+++ b/src/AppBundle/Resources/views/Default/recent_decklists.html.twig
@@ -18,9 +18,9 @@
 		<small class="reputation">{{ decklist.reputation }}</small>
 	</div>
 	<div class="small social">
-		<span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}
-		<span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbfavorites }}
-		<span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbcomments }}
+		<span class="fa fa-heart social-icon-like"></span> {{ decklist.nb_votes }}
+		<span class="fa fa-star social-icon-favorite"></span> {{ decklist.nb_favorites }}
+		<span class="fa fa-comment social-icon-comment"></span> {{ decklist.nb_comments }}
 	</div>
 	</td>
 	</tr>
