--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -41,7 +41,7 @@
     <article class="review" data-code="{{ review.id }}" id="review-{{ review.id }}">
        <div class="review-like">
            <a id="review-social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like that review">
-        	   <span class="fa fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
+        	   <span class="fa fa-heart"></span> <span class="num">{{ review.nb_votes }}</span>
     	   </a>
        </div>
        <div class="review-content">
