--- a/src/AppBundle/Resources/views/Search/display-zoom.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-zoom.html.twig
@@ -56,7 +56,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
         	   
         	       <div class="review-like">
         	           <a id="review-social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like that review">
-                    	   <span class="fa fa-heart"></span> <span class="num">{{ review.nbVotes }}</span>
+                    	   <span class="fa fa-heart"></span> <span class="num">{{ review.nb_votes }}</span>
                 	   </a>
         	       </div>
         	       <div class="review-content">
