--- a/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/table-successor.html.twig
@@ -7,9 +7,9 @@
 {% for decklist in successor_decklists %}
 <tr>
 	<td class="decklist-name"><a href="{{ path('decklist_detail', { 'decklist_id': decklist.id, 'decklist_name': decklist.name_canonical|e('url') }) }}">{{ decklist.name }}</a></td>
-	<td class="social"><span class="fa fa-heart social-icon-like"></span> {{ decklist.nbVotes }}</td>
-	<td class="social"><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nbfavorites }}</td>
-	<td class="social"><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nbcomments }}</td>
+	<td class="social"><span class="fa fa-heart social-icon-like"></span> {{ decklist.nb_votes }}</td>
+	<td class="social"><span class="fa fa-star social-icon-favorite"></span> {{ decklist.nb_favorites }}</td>
+	<td class="social"><span class="fa fa-comment social-icon-comment"></span> {{ decklist.nb_comments }}</td>
 </tr>
 {% endfor %}
 {% else %}
