style of decklist

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -77,7 +77,6 @@ td.type, td.faction {
 }
 .main.container {
 	background-color: #fff;
-	border: 1px solid #ddd;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	margin-bottom: 100px;
@@ -252,73 +251,40 @@ div.site-slogan {
     height: 64px;
 }
 
+/************* DECKLIST *********************/
+
+.row.title {
+	padding-top:20px;
+	margin-bottom:20px;
+	padding-bottom:10px
+}
+
 /************** FACTIONS COLORS **************/
 
-.targaryen {
-	color: #e01510;
+.row.targaryen {
+	background-color: #c00106;
 }
-.baratheon {
-	color: #e3d852;
+.row.baratheon {
+	background-color: #e3d852;
 }
-.stark {
-	color: #cfcfcf;
+.row.stark {
+	background-color: #cfcfcf;
 }
-.greyjoy {
-	color: #1d7893;
+.row.greyjoy {
+	background-color: #1d7893;
 }
-.lannister {
-	color: #e60a18;
+.row.lannister {
+	background-color: #f02618;
 }
-.tyrell {
-	color: #509f16;
+.row.tyrell {
+	background-color: #509f16;
 }
-.nightswatch {
-	color: #6e6e6e;
+.row.nightswatch {
+	background-color: #6e6e6e;
 }
-.martell {
-	color: #e89521;
+.row.martell {
+	background-color: #e89521;
 }
-.neutral {
-	color: #a99560;
-}
-
-.with-bg.lannister {
-	background-color: #A80B00;
-	color: #EDC76B;
-	text-shadow: white 0px -1px 1px, black 0px 1px 1px;
-}
-.with-bg.stark {
-	background-color: #E4E5E5;
-	color: #515252;
-	text-shadow: white 0px -1px 1px, black 0px 1px 1px;
-}
-.with-bg.tyrell {
-	background-color: #3E8235;
-	color: #E5CE1E;
-	text-shadow: white 0px -1px 1px, black 0px 1px 1px;
-}
-.with-bg.nightswatch {
-	background-color: #879596;
-	color: #000;
-	text-shadow: white 0px -1px 1px, white 0px 1px 1px, black 0px 2px 2px;
-}
-.with-bg.baratheon {
-	background-color: #F2DC35;
-	color: #000;
-	text-shadow: white 0px -1px 1px, white 0px 1px 1px, black 0px 2px 2px;
-}
-.with-bg.targaryen {
-	background-color: #0E002E;
-	color: #8C0E0E;
-	text-shadow: white 0px -1px 1px, black 0px 1px 1px;
-}
-.with-bg.greyjoy {
-	background-color: #00022E;
-	color: #D4AD40;
-	text-shadow: black 0px -1px 1px, black 0px 1px 1px;
-}
-.with-bg.martell {
-	background-color: #E0AB48;
-	color: #F04626;
-	text-shadow: black 0px -1px 1px, black 0px 1px 1px, white 0px -2px 2px;
+.row.neutral {
+	background-color: #a99560;
 }
