--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -11,7 +11,7 @@
 
 {% block body %}
 <div class="container">
-	<div class="row" style="padding-top:20px;margin-bottom:20px;padding-bottom:10px;background-color:#c0392b;color:#fff">
+	<div class="row title {{ decklist.faction_code }}">
 		<div class="col-xs-12">
 			<h1 class="decklist-name">
 				<span class="icon icon-{{ decklist.faction_code }}"></span>
