--- a/src/AppBundle/Resources/views/Default/profile.html.twig
+++ b/src/AppBundle/Resources/views/Default/profile.html.twig
@@ -9,7 +9,7 @@
   {% if user.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
     <small>{{ user.reputation }}</small></h1>
 	<p>
-        Member since {{ user.creation|date('Y-m-d') }}.
+        Member since {{ user.date_creation|date('Y-m-d') }}.
         <div>
         {% if nbdecklists > 1 %}
             <a href="{{ path('decklists_list',{type:'find',page:1,author:user.username}) }}">{{ nbdecklists }} published decklists.</a>
