--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -13,7 +13,7 @@
 <div class="container">
 	<div class="row title {{ decklist.faction_code }}">
 		<div class="col-xs-12">
-			<h1 class="decklist-name">
+			<h1 class="decklist-name text-center">
 				<span class="icon icon-{{ decklist.faction_code }}"></span>
 				{{ decklist.name }}
 			</h1>
