--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -11,7 +11,7 @@
 
 {% block body %}
 <div class="container">
-	<div class="row title {{ decklist.faction_code }}">
+	<div class="row title bg-{{ decklist.faction_code }}">
 		<div class="col-xs-12">
 			<h1 class="decklist-name text-center">
 				<span class="icon icon-{{ decklist.faction_code }}"></span>
