deck editor tweks

--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -12,10 +12,11 @@
 		<span class="fa fa-download"></span> <span class="hidden-xs">Download</span> <span class="caret"></span>
 	</button>
 	<ul class="dropdown-menu" role="menu">
-		<li><a href="#" id="btn-download-text">Text file</a></li>
+{#		<li><a href="#" id="btn-download-text">Text file</a></li>#}
 		<li><a href="#" id="btn-download-octgn">Octgn file</a></li>
 	</ul>
 </div>
+{#
 <div class="btn-group">
 	<button type="button" class="btn btn-sm btn-default dropdown-toggle " data-toggle="dropdown">
 		<span class="fa fa-clipboard"></span> <span class="hidden-xs">Export</span> <span class="caret"></span>
@@ -37,7 +38,6 @@
 		<li><a href="#" id="btn-sort-name">by Name</a></li>
 	</ul>
 </div>
-{#
 <button type="button" id="btn-compare" class="btn btn-sm btn-default">
 	<span class="fa fa-duplicate"></span> <span class="hidden-xs">Compare</span>
 </button>
