--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -99,7 +99,7 @@ $(function () {
 	<h5>
 		<time class="pull-right" datetime="{{ decklist.date_creation|date('c') }}">{{ decklist.date_creation|date('M d') }}</time>
 		<span class="username">
-    		<a href="{{ path('user_profile_view', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
+    		<a href="{{ path('user_profile_public', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
     		{% if decklist.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
     		<small class="reputation">{{ decklist.reputation }}</small>
 		</span>
