--- a/src/AppBundle/Resources/views/Default/decklist_of_the_week.html.twig
+++ b/src/AppBundle/Resources/views/Default/decklist_of_the_week.html.twig
@@ -24,7 +24,7 @@
 <h4>
     Description by the author:
     <span class="username">
-    <a href="{{ path('user_profile_view', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
+    <a href="{{ path('user_profile_public', {user_id:decklist.user_id,user_name:decklist.username|e('url')}) }}" class="{{ decklist.usercolor }}">{{ decklist.username }}</a>
     {% if decklist.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
     <small title="User Reputation">{{ decklist.reputation }}</small>
     </span>
