--- a/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
+++ b/src/AppBundle/Resources/views/Default/recent_reviews.html.twig
@@ -8,7 +8,7 @@
 		  <a href="{{ path('cards_zoom', {card_code:review.card_code}) }}#review-{{ review.id }}" class="card">{{ review.card_name }}</a>
 		</h4>
 		<div class="username small">
-    		by <a href="{{ path('user_profile_view', {user_id:review.user_id,user_name:review.username|e('url')}) }}" class="{{ review.usercolor }}">{{ review.username }}</a>
+    		by <a href="{{ path('user_profile_public', {user_id:review.user_id,user_name:review.username|e('url')}) }}" class="{{ review.usercolor }}">{{ review.username }}</a>
     		{% if review.donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
     		<small class="reputation">{{ review.reputation }}</small>
     	</div>
